# fburpp

./: .gitignore  Makefile  README.md  tester.py
python/: fburpp.py  fburpp_python.py
rust/: Cargo.toml  README.md
rust/src/: data.rs  fburpp.rs  job.rs  lib.rs  main.rs
rust/src/filetypes/: csv.rs  json.rs  mod.rs
rust/src/read_write/: csv.rs  mod.rs
