[package]
name = "fburpp"
version = "0.1.0"
authors = ["kremrik <kyle.robert.e@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "fburpp"
crate-type = ["cdylib", "rlib"]

[dependencies]
csv = "1.1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0"}

[dependencies.pyo3]
version = "0.15.1"
features = ["extension-module"]
